test/cli/test/images/verify-required/kyverno-test.yaml
name: test-image-verify-signature
policies:
  - policies.yaml
resources:
  - resources.yaml
results:
  - policy: require-image-ver
    rule: verify-signature
    resource: verified
    kind: Pod
    status: pass
  - policy:  require-image-ver
    rule: verify-signature
    resource: notverified
    kind: Pod
    status: fail
