test/cli/test/images/verify-required/policies.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-image-ver
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: verify-signature
      match:
        resources:
          kinds:
            - Pod
      verifyImages:
        - imageReferences:
            - "*"
