test/cli/test/images/verify-required/resources.yaml

---
apiVersion: v1
kind: Pod
metadata:
  name: withdigest
spec:
  containers:
    - name: signed
      image: ghcr.io/kyverno/test-verify-image:signed
---
apiVersion: v1
kind: Pod
metadata:
  name: withoutdigest
spec:
  containers:
    - name: signed
      image: ghcr.io/kyverno/test-verify-image:unsigned
